--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "lint": "eslint src/**/*.ts",
     "dist": "ncc build",
-    "test": "jest",
-    "all": "yarn format && yarn lint && yarn build && yarn dist && yarn test"
+    "all": "yarn format && yarn build && yarn dist"
   },
   "repository": {
     "type": "git",
@@ -28,24 +26,14 @@
   "author": "Termux Maintainers",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
-    "@types/glob": "^8.1.0",
-    "glob": "^10.3.10"
+    "@actions/core": "^2.0.1",
+    "@actions/github": "^6.0.1",
+    "glob": "^13.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.2",
-    "@typescript-eslint/parser": "^7.4.0",
-    "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-github": "^4.10.2",
-    "eslint-plugin-jest": "^27.9.0",
-    "jest": "^29.7.0",
-    "jest-circus": "^29.7.0",
-    "js-yaml": "^4.1.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^25.0.3",
+    "@vercel/ncc": "^0.38.4",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3"
   }
 }
